# CPP-library-management-system-backend

./: CMakeLists.txt
src/: main.cpp
src/database/: Database.cpp  Database.h
src/domain/: Book.cpp  Book.h  Loan.cpp  Loan.h  User.cpp  User.h
src/repositories/: BookRepository.h  InMemoryBookRepository.cpp  InMemoryBookRepository.h  InMemoryLoanRepository.cpp  InMemoryLoanRepository.h  InMemoryUserRepository.cpp  InMemoryUserRepository.h  LoanRepository.h  SqliteBookRepository.cpp  SqliteBookRepository.h  SqliteLoanRepository.cpp  SqliteLoanRepository.h  SqliteUserRepository.cpp  SqliteUserRepository.h  UserRepository.h
src/services/: AuthorizationService.cpp  AuthorizationService.h  BorrowService.cpp  BorrowService.h
